src/test/ui/parser/pat-tuple-4.stderr
error: expected one of `)` or `,`, found `pat`
  --> $DIR/pat-tuple-4.rs:5:13
   |
LL |         (.. pat) => {} //~ ERROR expected one of `)` or `,`, found `pat`
   |             ^^^ expected one of `)` or `,` here

error: aborting due to previous error

